[project]
name = "function-calling-tool"
version = "0.1.0"
description = "Constrained decoding for function calling with Qwen3-0.6B"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "llm-sdk",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
